move pandas to jupyterlab_pandas

--- a/jupyterlab/jupyterlab_pandas/pandas.ipynb
+++ b/jupyterlab/jupyterlab_pandas/pandas.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "raw",
+   "id": "ahead-jewelry",
+   "metadata": {},
+   "source": [
+    "<!-- markdownlint-disable MD012 MD033 MD046 -->"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "elder-guide",
+   "id": "located-result",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "third-baseball",
+   "id": "floppy-server",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,20 +31,32 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "based-wyoming",
+   "id": "lyric-seller",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tasks.read_csv_kite_pris()"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "divine-married",
+   "id": "union-brunswick",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = 'https://kite.com/kite-public/iris.csv'\n",
+    "df = pd.read_csv(url)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "horizontal-corpus",
+   "metadata": {},
+   "source": [
+    "<!-- markdownlint-enable MD012 MD033 MD046 -->"
+   ]
   }
  ],
  "metadata": {
